objects/LAT_UnitConversionRates__c.object
<CustomObject>
    <fields>
        <fullName>Destino__c</fullName>
        <inlineHelpText>Unit of value after the conversion</inlineHelpText>
        <label>Destino</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Factor__c</fullName>
        <label>Factor</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KeyUnica__c</fullName>
        <formula>SKU__r.Internal_id__c + &apos;-&apos; + Origen__c + &apos;-&apos; + Destino__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KeyUnica</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_KeyUnica__c</fullName>
        <externalId>true</externalId>
        <label>LAT KeyUnica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAT_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>LAT_Product__c</referenceTo>
        <relationshipLabel>UnitConversionRates</relationshipLabel>
        <relationshipName>LAT_UnitConversionRates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Origen__c</fullName>
        <inlineHelpText>Unit before conversion</inlineHelpText>
        <label>Origen</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>UnitConversionRates</relationshipLabel>
        <relationshipName>UnitConversionRates</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LAT_UnitConversionRates</label>
    <listViews>
        <fullName>Brazil</fullName>
        <columns>NAME</columns>
        <columns>Origen__c</columns>
        <columns>Destino__c</columns>
        <columns>Factor__c</columns>
        <columns>LAT_Product__c</columns>
        <columns>LAT_KeyUnica__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_KeyUnica__c</field>
            <operation>startsWith</operation>
            <value>1-</value>
        </filters>
        <label>Brazil</label>
        <language>pt_BR</language>
    </listViews>
    <listViews>
        <fullName>Mexico</fullName>
        <columns>NAME</columns>
        <columns>LAT_Product__c</columns>
        <columns>Origen__c</columns>
        <columns>Destino__c</columns>
        <columns>Factor__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAT_KeyUnica__c</field>
            <operation>startsWith</operation>
            <value>12-</value>
        </filters>
        <label>Mexico</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UCR - {0000}</displayFormat>
        <label>UnitConversionRates Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UnitConversionRates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>